--- a/src/app/calendar/calendar.component.scss
+++ b/src/app/calendar/calendar.component.scss
@@ -6,6 +6,50 @@
   max-width: 1140px;
   margin: auto;
 }
+.calendar-selector {
+  overflow: hidden;
+  width: 200px; 
+  height: 100px; 
+}
+.alert {
+  position: absolute;
+  background: linear-gradient(135deg, #cacc60, #ff9800); 
+  color: #fff;
+  padding: 15px 25px;
+  border-radius: 12px; 
+  font-size: 16px;
+  z-index: 1;
+  top: 10px;
+  right: 90%;
+  transform: translateX(-50%);
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.4); 
+  text-align: center;
+  animation: bounce 0.5s infinite alternate; 
+  border: 2px solid #fff; 
+  clip-path: polygon(10% 0%, 90% 0%, 100% 10%, 100% 90%, 90% 100%, 10% 100%, 0% 90%, 0% 10%); 
+}
+
+@keyframes bounce {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-10px);
+  }
+}
+.scrollable-month-year {
+  overflow-y: auto;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar-month {
+  font-size: 24px;
+  text-align: center;
+  margin: 0;
+}
 .cell-overlay {
   position: absolute;
   width: 100%;
